# raytracer-cpp

./: .gitignore  CMakeLists.txt  README.me  TODO.txt  Utils.cmake  generate.sh
BuildSystem/: Utils.cmake
Libs/BeDDev/: CMakeLists.txt
Libs/BeDDev/Include/Beddev/: BaseTestCase.h  Beddev.h  BeddevImpl.h  ColoredOutput.h  Expression.h  ExpressionParser.h  ParametrizedTestCase.h  SessionSummary.h  TestCase.h  TestRunner.h
Libs/BeDDev/Src/: BaseTestCase.cpp  SessionSummary.cpp  TestCase.cpp  TestRunner.cpp
Libs/BeDDev/Test/Src/: Beddev.cpp  ExpressionParser.cpp  ParametrizedTestCase.cpp  TestCase.cpp  TestRunner.cpp
Libs/RayTracer/: CMakeLists.txt
Libs/RayTracer/Include/: Camera.h  Canvas.h  Color.h  Intersection.h  Lighting.h  Material.h  MathIntrinsics.h  Matrix.h  Pattern.h  Plane.h  Ray.h  Shape.h  SimplexNoise.h  Sphere.h  Transformations.h  Tuple.h  Types.h  Util.h  World.h
Libs/RayTracer/Include/RayTracer/: Archetype.h  Bounds.h  Camera.h  Canvas.h  Color.h  Cone.h  Cube.h  Cylinder.h  Group.h  Lighting.h  Loader.h  Material.h  Matrix.h  Pattern.h  Plane.h  Shape.h  Sphere.h  Transformations.h  Tuple.h  Types.h  Util.h  World.h
Libs/RayTracer/Samples/Resources/: Ch13_CylindersAndCones.scene.json  ch14_groups.scene.json
Libs/RayTracer/Samples/Src/: Cubes.cpp  CylindersAndCones.cpp  FresnelEffect.cpp  Groups.cpp  LitSphere.cpp  Main.cpp  MathIntrinsicsTests.cpp  Patterns.cpp  Plane.cpp  ProjectilTrajectory.cpp  ReflectionAndRefraction.cpp  SampleUtils.cpp  SampleUtils.h  Scene.cpp  SphereSilhouette.cpp  WallClock.cpp
Libs/RayTracer/Src/: Bounds.cpp  Camera.cpp  Canvas.cpp  Cone.cpp  Cube.cpp  Cylinder.cpp  Group.cpp  Intersection.cpp  Lighting.cpp  Loader.cpp  Material.cpp  Matrix.cpp  Pattern.cpp  Plane.cpp  Ray.cpp  Shape.cpp  SimplexNoise.cpp  Sphere.cpp  Transformations.cpp  Tuple.cpp  Util.h  World.cpp
Libs/RayTracer/Src/Shapes/: Cone.cpp  (+7 more)
Libs/VulkApp/: CMakeLists.txt
Libs/VulkApp/Include/VulkApp/: Application.h  GpuBuffer.h  Image.h  SwapChain.h  Texture.h  UiManager.h  VulkanUtils.h
Libs/VulkApp/Resources/Shaders/: main.frag.glsl  main.vert.glsl
Libs/VulkApp/Src/: Application.cpp  GpuBuffer.cpp  Image.cpp  Main.cpp  SwapChain.cpp  Texture.cpp  UiManager.cpp  VulkanUtils.cpp
(+33 files in other folders)
